feat/add active menu functionality

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -58,31 +58,7 @@
     <!-- Navbar -->
 
     <!-- Sidebar -->
-    <div class="sidebar-fixed position-fixed">
-
-      <a class="logo-wrapper waves-effect">
-        <img src="asset/img/logo.jpg" class="img-fluid" alt="">
-      </a>
-
-      <div class="list-group list-group-flush">
-        <a href="/online_assignment/admin/dashboard" class="list-group-item active waves-effect">
-          <i class="fas fa-chart-pie mr-3"></i>Manage Assignment
-        </a>        
-        <a href="/online_assignment/admin/submissions" class="list-group-item list-group-item-action waves-effect">
-          <i class="fas fa-table mr-3"></i>Submissions</a>
-        <a href="/online_assignment/admin/students" class="list-group-item list-group-item-action waves-effect">
-          <i class="fas fa-user mr-3"></i>My Students</a>  
-        <a href="/online_assignment/admin/courses" class="list-group-item list-group-item-action waves-effect">
-          <i class="fas fa-book mr-3"></i>My Assigned Courses</a>     
-        <a href="/online_assignment/admin/faculty" class="list-group-item list-group-item-action waves-effect">
-          <i class="fas fa-building mr-3"></i>Faculty/Institute</a>  
-        <a href="/online_assignment/admin/departments" class="list-group-item list-group-item-action waves-effect">
-          <i class="fas fa-building mr-3"></i>Departments</a>        
-        <a href="/online_assignment/admin/levels" class="list-group-item list-group-item-action waves-effect">
-          <i class="fas fa-building mr-3"></i>Lecture rooms</a>     
-      </div>
-
-    </div>
+    {{> sidebar }}
     <!-- Sidebar -->
 
   </header>
