--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -17,6 +17,7 @@
   <script type="text/javascript" src="asset/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="asset/js/mdb.min.js"></script>
-
+  <!-- Master JS -->
+  <script type="text/javascript" src="asset/js/master.js"></script>
 </body>
 </html>
