--- a/views/pages/default/staff.hbs
+++ b/views/pages/default/staff.hbs
@@ -1,5 +1,5 @@
-<!--Main layout-->
-<main class="pt-5 mx-lg-5">
+<!--Main layout--><!--Accordion wrapper-->
+<main class="pt-5 mx-lg-5 accordion md-accordion" id="accordionCont" role="tablist" aria-multiselectable="true">
     <div class="container-fluid mt-5">
 
         <!-- Heading -->
@@ -9,7 +9,8 @@
                 <span>New Staff</span>
                 </h4>
                 <section class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary" id="">View Records</button>
+                    <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#recordTable"
+                        aria-expanded="true" aria-controls="recordTable">View Records</button>
                 </section>
             </div>
         </div>
@@ -17,49 +18,71 @@
 
         <div class="row wow fadeIn">
             <div class="col-md-12 mb-4">
-                <div class="card">
-                    <div class="card-header text-left">
-                        Staff creation form
+                 <!-- Accordion card -->
+                <div class="card z-depth-0">
+                    <!-- Card header -->
+                    <div class="card-header" role="tab" id="collapseFormHeading">
+                        <a data-toggle="collapse" data-parent="#accordionCont" href="#collapseForm" aria-expanded="true"
+                            aria-controls="collapseForm">
+                            <h5 class="mb-0 text-dark">
+                            Staff Creation Form <i class="fas fa-angle-down rotate-icon"></i>
+                            </h5>
+                        </a>
                     </div>
-                    <div class="card-body">
-                        <form action="" method="post">
-                            <input type="text" id="name" name="name" class="form-control mb-4" placeholder="Fullname" value="">
-                            <input type="text" id="name" name="name" class="form-control mb-4" placeholder="Phone" value="">
-                            <input type="text" id="code" name="code" class="form-control mb-4" placeholder="Email" value="">
-                            <div class="">
-                                <button class="btn btn-danger" id="clearform">Clear</button>
-                                <button class="btn btn-default" type="submit" name="save">Save</button>
-                                <button class="btn btn-primary d-none" type="submit" name="update">Update</button>
-                                <button class="btn btn-secondary d-none" type="submit" name="delete">Delete</button>
-                            </div>
-                        </form>
-                    </div>
+                    <!-- Card body -->
+                    <div id="collapseForm" class="collapse show" role="tabpanel" aria-labelledby="collapseFormHeading"
+                    data-parent="#accordionCont">
+                        <div class="card-body">
+                            <form action="" method="post">
+                                <input type="text" id="name" name="name" class="form-control mb-4" placeholder="Fullname" value="">
+                                <input type="number" id="phone" name="name" class="form-control mb-4" placeholder="Phone" value="">
+                                <input type="email" id="email" name="code" class="form-control mb-4" placeholder="Email" value="">
+                                <div class="">
+                                    <button class="btn btn-danger" id="clearform">Clear</button>
+                                    <button class="btn btn-default" type="submit" name="save">Save</button>
+                                    <button class="btn btn-primary d-none" type="submit" name="update">Update</button>
+                                    <button class="btn btn-secondary d-none" type="submit" name="delete">Delete</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>                    
                 </div>
+                 <!--/ Accordion card -->
             </div>
         </div>
 
         <div class="row wow fadeIn">
             <div class="col-md-12 mb-4">
                 <div class="card">
-                    <div class="card-header text-left">
-                        Manage Staff Records
+                    <!-- Card header -->
+                    <div class="card-header" role="tab" id="recordTableHeading">
+                        <a data-toggle="collapse" data-parent="#accordionCont" href="#recordTable" aria-expanded="true"
+                            aria-controls="recordTable">
+                            <h5 class="mb-0 text-dark">
+                             Manage Staff Records <i class="fas fa-angle-down rotate-icon"></i>
+                            </h5>
+                        </a>
                     </div>
-                    <div class="card-body">
-                        <table class="table table-hover">
-                            <!-- Table head -->
-                            <thead class="blue-grey lighten-4">
-                            <tr>
-                                <th>#</th>
-                                <th>Fullname</th>
-                                <th>Phone</th>
-                                <th>Email</th>
-                                <th>Action</th>
-                            </tr>
-                            </thead>
-                            <!-- Table head -->
+                    <!-- Card body -->
+                    <div id="recordTable" class="collapse show" role="tabpanel" aria-labelledby="recordTableHeading"
+                    data-parent="#accordionCont">
+                        <div class="card-body">
+                            <table class="table table-hover">
+                                <!-- Table head -->
+                                <thead class="blue-grey lighten-4">
+                                <tr>
+                                    <th>#</th>
+                                    <th>Fullname</th>
+                                    <th>Phone</th>
+                                    <th>Email</th>
+                                    <th>Action</th>
+                                </tr>
+                                </thead>
+                                <!-- Table head -->
 
-                            <!-- Table body -->
-                            <tbody>
+                                <!-- Table body -->
+                                <tbody>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -72,4 +95,29 @@
 {{> footer }}
 
 {{!-- page level js below --}}
-
+<script>
+    $('[name="save"]').click(function(e){
+        e.preventDefault();
+        const name = $('#name').val();
+        const phone = $('#phone').val();
+        const email = $('#email').val();
+        if(!name || !phone || !email) return alert('Empty field not allowed');
+        const code = 'nimc';
+        const staff = { name, phone, email };
+        const postObj = { code, staff };
+        console.log(postObj);
+        fetch('/api/addStaff', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(postObj)
+        }).then(response => response.json())
+        .then((data)=>{
+            if(data.status == "success"){
+                return alert(data.message);
+            }
+            return alert(data.message);
+        })
+    });
+</script>
