--- a/views/pages/default/staff.hbs
+++ b/views/pages/default/staff.hbs
@@ -37,6 +37,16 @@
                                 <input type="text" id="name" name="name" class="form-control mb-4" placeholder="Fullname" value="">
                                 <input type="number" id="phone" name="name" class="form-control mb-4" placeholder="Phone" value="">
                                 <input type="email" id="email" name="code" class="form-control mb-4" placeholder="Email" value="">
+                                <div>
+                                    <div class="custom-control custom-radio">
+                                        <input type="radio" class="custom-control-input" id="staff" name="role" checked value="staff">
+                                        <label class="custom-control-label" for="staff">Staff</label>
+                                    </div>
+                                    <div class="custom-control custom-radio">
+                                        <input type="radio" class="custom-control-input" id="admin" name="role" value="admin">
+                                        <label class="custom-control-label" for="admin">Admin</label>
+                                    </div>
+                                </div>
                                 <div class="">
                                     <button class="btn btn-danger" id="clearform">Clear</button>
                                     <button class="btn btn-default" type="submit" name="save">Save</button>
@@ -75,13 +85,13 @@
                                     <th>Fullname</th>
                                     <th>Phone</th>
                                     <th>Email</th>
+                                    <th>Role</th>
                                     <th>Action</th>
                                 </tr>
                                 </thead>
-                                <!-- Table head -->
-
-                                <!-- Table body -->
                                 <tbody>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -96,15 +106,53 @@
 
 {{!-- page level js below --}}
 <script>
+    var editedID;
+    var staffs = [];
+
+    function loadStaff(){
+        return new Promise((resolve,reject)=>{
+            fetch('/api/staff/nimc', {
+                method: 'GET',
+            }).then(response => response.json())
+            .then((res)=>{
+                if(res.status == "success"){
+                    resolve(res.data);
+                }
+                reject([]);
+            });
+        });        
+    }
+
+    const drawTable = () => {  
+        loadStaff().then((data)=>{
+            var table = $('table tbody');   
+            table.html('');
+            staffs = data;
+            if(!data.length) return false;      
+            data.forEach(({ name, phone, email, uid, id, role },index)=>{      
+                const tr = `<tr data-id="${id}" data-uid="${uid}"><td>${index + 1}</td><td>${name}</td><td>${phone}</td><td>${email}</td><td>${role}</td>
+                <td>
+                    <button class="btn btn-primary btn-sm my-0 p waves-effect waves-light edit">Edit</button>
+                    <button class="btn btn-danger btn-sm my-0 p waves-effect waves-light remove">Remove</button>
+                </td></tr>`;
+                table.append(tr);
+            });
+        })        
+    }
+
     $('[name="save"]').click(function(e){
         e.preventDefault();
         const name = $('#name').val();
         const phone = $('#phone').val();
         const email = $('#email').val();
+
+        const role = $("input[type='radio'][name='role']:checked").val();
         if(!name || !phone || !email) return alert('Empty field not allowed');
+
         const code = 'nimc';
-        const staff = { name, phone, email };
+        const staff = { name, phone, email, role };
         const postObj = { code, staff };
+
         console.log(postObj);
         fetch('/api/addStaff', {
             method: 'POST',
@@ -115,9 +163,78 @@
         }).then(response => response.json())
         .then((data)=>{
             if(data.status == "success"){
+                $('#clearform').trigger('click');
+                window.location.reload();
                 return alert(data.message);
             }
             return alert(data.message);
         })
     });
+
+    $('[name="update"]').click(function(e){
+        e.preventDefault();
+        const name = $('#name').val();
+        const phone = $('#phone').val();
+        const email = $('#email').val();
+        const role = $("input[type='radio'][name='role']:checked").val();
+        if(!name || !phone || !email) return alert('Empty field not allowed');
+
+        const id = editedID;
+
+        const code = 'nimc';
+        const staff = { id, name, phone, email, role };
+        const postObj = { code, staff };
+
+        console.log(postObj);
+        fetch('/api/staff', {
+            method: 'PUT',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(postObj)
+        }).then(response => response.json())
+        .then((data)=>{
+            if(data.status == "success"){
+                $('#clearform').trigger('click');
+                window.location.reload();
+                editedID = null;
+                return alert(data.message);
+            }
+            return alert(data.message);
+        })
+    });
+
+    $('#clearform').click(function(e){
+        e.preventDefault();
+        $('input').val('');
+        $('[name="update"]').addClass('d-none');
+        $('[name="save"]').removeClass('d-none');
+    });
+
+    $('body').on('click','.remove', function(){
+      var index = $(this).closest('tr').data('id');
+      itemList.splice(index,1);
+      drawTable(itemList);
+      $('#clearform').trigger('click');
+    });
+
+    $('body').on('click','.edit', function(){
+        
+        window.scrollTo(0,0);
+        
+        editedID = $(this).closest('tr').data('id');
+        console.log(staffs, editedID);
+        var { name, email, phone, role } = staffs.find( staff => staff.id == editedID)
+        
+        $("#name").val(name);
+        $("#phone").val(phone);
+        $("#email").val(email);  
+        (role == 'admin') ? $("#admin").prop('checked') : $("#staff").prop('checked');
+        //toggle
+        $('[name="update"]').removeClass('d-none');
+        $('[name="save"]').addClass('d-none');
+    });
+
+    drawTable();
+
 </script>
