feat/add nimc form

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -44,7 +44,7 @@
           <!-- Right -->
           <ul class="navbar-nav nav-flex-icons">
             <li class="nav-item pr-2">
-              <p>Welcome {{ user.name }}</p>
+              <p>Hi {{ user.name }}</p>
             </li>
             <li class="nav-item">
               <a href="/logout">Logout</a>
