--- a/views/pages/default/staff.hbs
+++ b/views/pages/default/staff.hbs
@@ -111,7 +111,7 @@
 
     function loadStaff(){
         return new Promise((resolve,reject)=>{
-            fetch('/api/staff/nimc', {
+            fetch('/api/getAll/mode=staff&code=nimc', {
                 method: 'GET',
             }).then(response => response.json())
             .then((res)=>{
@@ -151,10 +151,10 @@
 
         const code = 'nimc';
         const staff = { name, phone, email, role };
-        const postObj = { code, staff };
+        const postObj = { code, staff, mode: 'staff' };
 
         console.log(postObj);
-        fetch('/api/addStaff', {
+        fetch('/api/create', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -183,10 +183,10 @@
 
         const code = 'nimc';
         const staff = { id, name, phone, email, role };
-        const postObj = { code, staff };
+        const postObj = { code, staff, mode: 'staff' };
 
         console.log(postObj);
-        fetch('/api/staff', {
+        fetch('/api/updateOne', {
             method: 'PUT',
             headers: {
                 'Content-Type': 'application/json',
