feat/implement citizen and staff delete endpoint

--- a/views/pages/default/index.hbs
+++ b/views/pages/default/index.hbs
@@ -7,7 +7,7 @@
     <p class="h4 mb-4">Sign in</p>
 
     <!-- passkey -->
-    <input type="text" id="passkey" class="form-control mb-4" placeholder="Enter passkey">
+    <input type="password" id="passkey" class="form-control mb-4" placeholder="Enter passkey">
 
     <div class="d-flex justify-content-around">
         <div>
