--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -11,7 +11,7 @@
     {{#if user.isAdmin }}
     <div class="list-group list-group-flush">
         {{!-- dashboard contain summary --}}
-        <a href="/dashboard" class="list-group-item list-group-item-action active waves-effect">
+        <a href="/dashboard" class="list-group-item list-group-item-action waves-effect">
             <i class="fas fa-chart-pie mr-3"></i>Dashboard 
         </a> 
         {{!-- manage citizen contains records created by the organization --}}
