--- a/views/pages/default/staff.hbs
+++ b/views/pages/default/staff.hbs
@@ -69,7 +69,7 @@
                         <a data-toggle="collapse" data-parent="#accordionCont" href="#recordTable" aria-expanded="true"
                             aria-controls="recordTable">
                             <h5 class="mb-0 text-dark">
-                             Manage Staff Records <i class="fas fa-angle-down rotate-icon"></i>
+                            Staff Records <i class="fas fa-angle-down rotate-icon"></i>
                             </h5>
                         </a>
                     </div>
