feat/implement capture user image and approval/reject of citizen info

--- a/views/pages/default/manage.hbs
+++ b/views/pages/default/manage.hbs
@@ -100,11 +100,15 @@
                                 <button class="btn btn-danger btn-sm my-0 p waves-effect waves-light reject">Reject</button>
                             </td></tr>`;
                         break;
-                        case 'reject':
+                        case 'rejected':
+                            tr = `<tr data-id="${id}" data-addr="${address}"><td>${index + 1}</td><td>${surname}</td><td>${firstname}</td><td>${middlename}</td>
+                            <td>${dob}</td><<td>${gender ? gender : "N/A"}</td><td>${nin}</td><td>${status}</td>
+                            <td class="text-center text-danger"><span class="fas fa-ban"></span></td></tr>`;
+                        break;
                         case 'approved':
                             tr = `<tr data-id="${id}" data-addr="${address}"><td>${index + 1}</td><td>${surname}</td><td>${firstname}</td><td>${middlename}</td>
                             <td>${dob}</td><<td>${gender ? gender : "N/A"}</td><td>${nin}</td><td>${status}</td>
-                            <td></td></tr>`;
+                            <td class="text-center text-success"><span class="fas fa-ban"></span></td></tr>`;
                         break;
                     }  
                 }else{ //staff
@@ -118,30 +122,70 @@
         })        
     }
 
-    $('body').on('click','.approve', function(){
-        //this action calls blockcahin
-        const id = $(this).closest('tr').data('id');
+    const updateCitizenStatus =(user, status)=> {
+        
         const code = 'nimc';
         const mode = 'citizen';
+        const detail = { ...user, status };
+        const postObj = { code, detail, mode };
 
-        if(!confirm('Are you sure')) return false;        
+        console.log(postObj);
 
-        fetch('/api/approveOn', {
-            method: 'DELETE',
+        fetch('/api/updateOne', {
+            method: 'PUT',
             headers: {
                 'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ code, mode, id })
+            body: JSON.stringify(postObj)
         }).then(response => response.json())
         .then((data)=>{
             if(data.status == "success"){
                 $('#clearform').trigger('click');
                 window.location.reload();
-                editedID = null;
                 return alert(data.message);
             }
             return alert(data.message);
         });
+    }
+
+    $('body').on('click','.approve', function(){
+        //this action calls blockcahin
+        const id = $(this).closest('tr').data('id');
+        const code = 'nimc';
+        const mode = 'citizen';   
+        const { org } = $('#auth_user').data(); 
+
+        if(!confirm('Are you sure, you want to approve this record?')) return false;  
+        const user_info = citizens.find( c => c.id == id);
+        user_info.status = "approved";
+        
+        fetch('http://localhost:8900/api/create_citizen', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ orgPublickey: org, user_info: JSON.stringify(user_info) })
+        }).then(response => response.json())
+        .then((data)=>{
+            if(data.status == "success"){
+                //updateStatus
+                updateCitizenStatus(user_info,"approved");
+            }
+            return alert(data.message);
+        });
+    });
+
+    $('body').on('click','.reject', function(){
+        //this action calls blockcahin
+        const id = $(this).closest('tr').data('id');
+        const code = 'nimc';
+        const mode = 'citizen';   
+        const { org } = $('#auth_user').data(); 
+
+        if(!confirm('Are you sure, you want to reject this record?')) return false;  
+        const user_info = citizens.find( c => c.id == id);
+        
+        updateCitizenStatus(user_info,"rejected");
     });
 
     drawTable();
