--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -44,7 +44,7 @@
           <!-- Right -->
           <ul class="navbar-nav nav-flex-icons">
             <li class="nav-item pr-2">
-              <p id="auth_user" data-role="{{user.role}}" data-email="{{user.email}}" data-phone="{{user.phone}}">Hi {{ user.name }}</p>
+              <p id="auth_user" data-role="{{user.role}}" data-email="{{user.email}}" data-phone="{{user.phone}}" data-org="{{user.orgPublickey}}">Hi {{ user.name }}</p>
             </li>
             <li class="nav-item">
               <a href="/logout">Logout</a>
