--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -11,9 +11,9 @@
     {{#if user.isAdmin }}
     <div class="list-group list-group-flush">
         {{!-- dashboard contain summary --}}
-        <a href="/dashboard" class="list-group-item list-group-item-action waves-effect">
+        {{!-- <a href="/dashboard" class="list-group-item list-group-item-action waves-effect">
             <i class="fas fa-chart-pie mr-3"></i>Dashboard 
-        </a> 
+        </a>  --}}
         {{!-- manage citizen contains records created by the organization --}}
         <a href="/manage_citizen" class="list-group-item list-group-item-action waves-effect">
             <i class="fas fa-chart-pie mr-3"></i>Manage Citizen
