--- a/views/pages/default/index.hbs
+++ b/views/pages/default/index.hbs
@@ -43,7 +43,7 @@
         }).then(response => response.json())
         .then((data)=>{
             if(data.status == "success"){
-                window.location.href = '/dashboard';
+                window.location.href = '/register';
             }
             return alert(data.message);
         }); 
