--- a/views/pages/default/register.hbs
+++ b/views/pages/default/register.hbs
@@ -9,7 +9,14 @@
                 <span>Register Citizen</span>
                 </h4>
                 <section class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary">Check User</button>
+                    {{!-- <button type="button" class="btn btn-primary">Check User</button> --}}
+                    <div class="input-group mb-3">
+                        <input type="text" id="singleID" name="singleID" class="form-control" placeholder="Citizen ID" 
+                            aria-describedby="checkIDentity" aria-label="Citizen ID">
+                        <div class="input-group-append">
+                            <button class="btn btn-md btn-default m-0 px-3 py-2 z-depth-0 waves-effect" type="button" id="checkIDentity">Check Identity</button>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
@@ -34,22 +41,22 @@
                         <div class="card-body">
                             <form action="" method="post">
                                 <div class="row">
-                                    <div class="col-md-7">
+                                    <div class="col-md-9">
                                         <div class="form-row mb-4">
                                             <div class="col">
                                                 <!-- Surname -->
                                                 <label class="control-label">Surname</label>
-                                                <input type="text" id="surname" name="surname" class="form-control" placeholder="Surname">
+                                                <input type="text" id="surname" name="surname" class="form-control namefield" placeholder="Surname">
                                             </div>
                                             <div class="col">
                                                 <!-- Firstname -->
                                                 <label class="control-label">Firstname</label>
-                                                <input type="text" id="firstname" name="firstname" class="form-control" placeholder="Firstname">
+                                                <input type="text" id="firstname" name="firstname" class="form-control namefield" placeholder="Firstname">
                                             </div>
                                             <div class="col">
                                                 <!-- Middlename -->
                                                 <label class="control-label">Middlename</label>
-                                                <input type="text" id="middlename" name="middlename" class="form-control" placeholder="Middlename">
+                                                <input type="text" id="middlename" name="middlename" class="form-control namefield" placeholder="Middlename">
                                             </div>
                                         </div>
                                         <div class="form-row mb-4">
@@ -77,8 +84,6 @@
                                             <div class="col">
                                                 <!-- NIN -->
                                                 <label class="control-label">NIN</label>
-                                                
-
                                                 <div class="input-group mb-3">
                                                     <input type="text" id="nin" name="nin" class="form-control" placeholder="NIN" 
                                                         aria-describedby="generateNIN" aria-label="Citizen NIN">
@@ -87,16 +92,19 @@
                                                     </div>
                                                 </div>
                                             </div> 
-                                        </div>
-                                    </div>
-                                    <div class="col-md-5">
-                                        <div class="form-row mb-1">
-                                            <div class="col">
+                                            <div class="col">                                                
                                                 <!-- Address -->
                                                 <div class="form-group">
                                                     <label for="address">Address</label>
-                                                    <textarea class="form-control rounded-0" id="address" name="address" rows="9" style="resize: none;"></textarea>
+                                                    <input type="text" class="form-control" id="address" name="address">
                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-row mb-1">
+                                            <div class="col">
+                                                {{> image}}
                                             </div> 
                                         </div>                                        
                                     </div>
@@ -156,6 +164,8 @@
             </div>
         </div>
 
+        {{> cameramodal }}
+
     </div>
 </main>
 <!--Main layout-->
@@ -166,8 +176,10 @@
 <script>
     var editedID;
     var citizens = [];
+    var userIdentity = {};
+    var fileUrlstring = null;
 
-    function loadCitizen(){
+    const loadCitizen = () => {
         return new Promise((resolve,reject)=>{
             fetch('/api/getAll/mode=citizen&code=nimc', {
                 method: 'GET',
@@ -190,8 +202,8 @@
             console.log(data); 
             //remove completed record
             data = data.filter( res => res.status == "pending");
-            data.forEach(({ surname, firstname, middlename, nin, dob, address, status, id, gender },index)=>{      
-                const tr = `<tr data-id="${id}" data-addr="${address}"><td>${index + 1}</td><td>${surname}</td><td>${firstname}</td><td>${middlename}</td>
+            data.forEach(({ surname, firstname, middlename, nin, dob, address, status, id, gender, fileurl },index)=>{      
+                const tr = `<tr data-id="${id}" data-addr="${address}" data-fileurl="${fileurl}"><td>${index + 1}</td><td>${surname}</td><td>${firstname}</td><td>${middlename}</td>
                 <td>${dob}</td><<td>${gender ? gender : "N/A"}</td><td>${nin}</td><td>${status}</td>
                 <td>
                     <button class="btn btn-primary btn-sm my-0 p waves-effect waves-light edit">Edit</button>
@@ -200,6 +212,105 @@
                 table.append(tr);
             });
         })        
+    }
+
+    const prepareFormData = () => {
+        let fieldData = {};
+        //combine all ipfsData as one
+        for(obj of userIdentity.ipfsData){
+          $.extend(fieldData, obj);
+        }
+        return fieldData;
+    }
+
+    const setFormfield = (obj) => {
+        //set other form fields except name and gender fields
+        for(prop in obj){
+            if(prop !== "name") $('#'+ prop).val(obj[prop]);
+        }
+        //set gender
+        (obj.gender && obj.gender == 'male') ? $("#male").prop('checked') : $("#female").prop('checked');
+
+        //get names fields
+        function getNames(){
+            const name = obj.name;
+            let nameArr = name.split(',');
+            nameArr = nameArr.filter(val => val !== '');
+            return nameArr;
+        }
+        //set names field
+        function setNames(fields){
+            const nameFieldCount = $('.namefield').length;
+            fields.forEach((val,index) => {
+                $('.namefield').eq(index).val(val);
+            });
+        }
+
+        const namesList = getNames();
+        setNames(namesList);
+
+        //set images
+        if(obj.fileurl) {
+            $('.image_container')
+                .css('background-image', `url(uploads/${obj.fileurl})`)
+                .addClass('has--image');
+            $('.user-avatar').css('display','none');
+        }else{
+            $('.image_container')
+                .css('background-image', '')
+                .removeClass('has--image');
+            $('.user-avatar').css('display','block');
+        }
+        
+    }
+
+    const captureImage = () => {
+        Webcam.set({
+          width: 320,
+          height: 240,
+          image_format: 'jpeg',
+          jpeg_quality: 90
+        });
+        Webcam.attach('.my_camera');
+    }
+
+    const take_snapshot = () => {
+        // take snapshot and get image data
+        Webcam.snap(function(data_uri) {
+            //set data url
+            fileUrlstring = data_uri;
+            // display results in page
+            $('.modal').modal('hide');
+            if(fileUrlstring !== null) {
+                $('.image_container')
+                .css('background-image', `url(${fileUrlstring})`)
+                .addClass('has--image');
+                $('.user-avatar').css('display','none');
+            }else{
+                $('.image_container')
+                .css('background-image', '')
+                .removeClass('has--image');
+                $('.user-avatar').css('display','block');
+            }
+        });
+    }
+
+    const saveUserData = (postObj) => {
+        fetch('/api/register', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(postObj)
+        }).then(response => response.json())
+        .then((data)=>{
+            if(data.status == "success"){
+                $('#clearform').trigger('click');
+                window.location.reload();
+                return alert(data.message);
+            }
+            return alert(data.message);
+        });
     }
 
     $('[name="save"]').click(function(e){
@@ -217,23 +328,31 @@
         const code = 'nimc';
         const mode = 'citizen';
         const citizen = { surname, firstname, middlename, dob, nin, address, gender};
-        const postObj = { code, citizen, mode };
 
-        fetch('/api/register', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(postObj)
-        }).then(response => response.json())
-        .then((data)=>{
-            if(data.status == "success"){
-                $('#clearform').trigger('click');
-                window.location.reload();
-                return alert(data.message);
-            }
-            return alert(data.message);
+        if (fileUrlstring === null) return alert('You must upload a passport for identification');
+
+        //1. upload image here and save new data
+        fetch(`/api/upload_passport`, {
+          method: "POST",
+          cache: "no-cache",
+          headers: {
+              "Content-Type": "application/json; charset=utf-8",
+          },
+          body: JSON.stringify({ fileUrlstring }),
         })
+        .then(response => response.json())
+        .then((res)=> {
+            console.log('file upload res: ', res);
+            //2. then save other form fields here
+            const { status, message, data } = res;
+            if (status == "success" && res && data) {
+                let { fileurl } = data;
+                const postObj = { code, citizen: {...citizen, fileurl }, mode };
+                console.log(postObj);
+                saveUserData(postObj);
+            }
+            
+        });
     });
 
     $('[name="update"]').click(function(e){
@@ -275,14 +394,48 @@
 
     $('#clearform').click(function(e){
         e.preventDefault();
-        $('input','textarea').val('');
+        $('input',).val('');
         $('[name="update"]').addClass('d-none');
         $('[name="save"]').removeClass('d-none');
-    });
+        // set image 
+        $('.image_container')
+            .css('background-image', '')
+            .removeClass('has--image');
+        $('.user-avatar').css('display','block');
+    });        
 
     $('#generateNIN').click(function(){
         $('#nin').val(new Date().getTime());
     });
+
+    $('#checkIDentity').click(function(e){
+        const userId = $('#singleID').val();
+
+        if(!singleID) return alert('Enter user id');
+        const { org } = $('#auth_user').data(); 
+
+        fetch('http://localhost:8900/api/check_citizen', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ orgPublickey: org, userId })
+        }).then(response => response.json())
+        .then((res)=>{
+            if(res.status == "success"){
+                //updateStatus
+                userIdentity = res.data;
+                setFormfield(prepareFormData());
+                return;
+            }
+            return alert(res.message);
+        });
+    });
+
+    $('#captureFace').click(captureImage);
+
+    /* camera capture */
+    $('#take_snapshot').on('click', take_snapshot);
 
     $('body').on('click','.remove', function(){
         const id = $(this).closest('tr').data('id');
@@ -315,7 +468,7 @@
         
         editedID = $(this).closest('tr').data('id');
         console.log(citizens, editedID);
-        var { surname, firstname, middlename, dob, nin, address, gender } = citizens.find( c => c.id == editedID)
+        var { surname, firstname, middlename, dob, nin, address, gender, fileurl } = citizens.find( c => c.id == editedID)
 
         $('#surname').val(surname);
         $('#firstname').val(firstname);
@@ -325,6 +478,18 @@
         $('#address').val(address);
 
         (gender && gender == 'Male') ? $("#male").prop('checked') : $("#female").prop('checked');
+        
+        if(fileurl) {
+            $('.image_container')
+                .css('background-image', `url(uploads/${fileurl})`)
+                .addClass('has--image');
+            $('.user-avatar').css('display','none');
+        }else{
+            $('.image_container')
+                .css('background-image', '')
+                .removeClass('has--image');
+            $('.user-avatar').css('display','block');
+        }
         //toggle
         $('[name="update"]').removeClass('d-none');
         $('[name="save"]').addClass('d-none');
